[project]
name = "domaintransfer-trial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]