[project]
name = "domaintransfer-trial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "prince>=0.19.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
    "umap-learn>=0.5.12",
    "wandb>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
